<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Trade">
    <Button
        android:id="@+id/wallet_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetRight="25dp"
        android:insetLeft="25dp"
        android:insetTop="30dp"
        android:textSize="20sp"
        android:text="@string/wallet_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="35dp"
        tools:context=".activity.Trade">


        <TextView
            android:id="@+id/asset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="asset name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/asset_unit_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/asset_unit_price"
            android:layout_width="272dp"
            android:layout_height="68dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="124dp"
            android:ems="10"
            android:text="asset price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/back_to_dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.197" />



        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/asset_unit_price">

            <Button
                android:id="@+id/buy_popup_btn"
                android:layout_width="197dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/Green"
                android:insetLeft="5dp"
                android:insetRight="25dp"
                android:text="@string/buy_popup_btn"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/asset_title"
                app:layout_constraintVertical_bias="0.796" />

            <Button
                android:id="@+id/sell_popup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Red"
                android:insetLeft="25dp"
                android:insetRight="5dp"
                android:text="@string/sell_popup_btn"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/asset_unit_price"
                app:layout_constraintVertical_bias="0.794" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/back_to_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetRight="25dp"
            android:insetLeft="25dp"
            android:insetBottom="15dp"
            android:textSize="20sp"
            android:text="@string/dashboard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>